Changes to the paper, various new bits plus fixing up some of the bibtex

--- a/academic/post-ifl2007/supero.bib
+++ b/academic/post-ifl2007/supero.bib
@@ -61,10 +61,10 @@
 % All of which I would know by name
 
 @unpublished{ghc,
-    title =         "The {GHC} Compiler, Version 6.6",
+    title =         "The {GHC} Compiler, Version 6.8",
     author =        "{The GHC Team}",
-    year =          "2006",
-    month =         oct,
+    year =          "2007",
+    month =         nov,
     note =          "\url{http://www.haskell.org/ghc/}",
 }
 
@@ -400,12 +400,14 @@
    year = {2007},
    month = {October},
    location = {Freiburg, Germany},
-   publisher = {ACM Press}
+   publisher = {ACM Press},
+   pages = {277--288},
 }
+
 
 @inproceedings{spj:awkward_squad,
   author = "Simon {Peyton Jones}",
-  title = "Tackling the Awkward Squad: monadic input/output, concurrency, exceptions, and foreign-language calls in Haskell",
+  title = "Tackling the Awkward Squad: monadic input/output, concurrency, exceptions, and foreign-language calls in {H}askell",
   booktitle = "Engineering theories of software construction, Marktoberdorf Summer School",
   year = "2002"
 }
@@ -414,13 +416,15 @@
 
 @inproceedings{spj:specconstr,
    author = {Simon {Peyton Jones}},
-   title = {Constructor specialisation for {H}askell programs},
+   title = {Call-pattern specialisation for {H}askell programs},
    booktitle = {Proc. ICFP '07},
    year = {2007},
+   pages = {327--337},
    month = {October},
    location = {Freiburg, Germany},
    publisher = {ACM Press}
 }
+
 
 @article{spj:inlining,
    author = {Simon {Peyton Jones} and Simon Marlow},
@@ -448,7 +452,9 @@
     booktitle = {Proc ICFP '07},
     year   = 2007,
     publisher = {ACM Press},
-    month  = apr,
+    pages = {315--326},
+    location = {Freiburg, Germany},
+    month  = "October",
 }
 
 @inproceedings{coutts:string_fusion,
@@ -896,8 +902,7 @@
  year = {2002},
  isbn = {3-540-00326-6},
  pages = {379--403},
- publisher = {Springer-Verlag New York, Inc.},
- address = {New York, NY, USA},
+ publisher = {Springer-Verlag},
  }
 
 @inproceedings{weirich:replib,
@@ -1137,14 +1142,14 @@
 @inproceedings{turchin:experiments,
  author = {Valentin F. Turchin and Robert M. Nirenberg and Dimitri V. Turchin},
  title = {Experiments with a supercompiler},
- booktitle = {LFP '82: Proceedings of the 1982 ACM symposium on LISP and functional programming},
+ booktitle = {Proc. LFP '82},
  year = {1982},
  isbn = {0-89791-082-6},
  pages = {47--55},
  location = {Pittsburgh, Pennsylvania, United States},
  doi = {http://doi.acm.org/10.1145/800068.802134},
  publisher = {ACM},
- address = {New York, NY, USA},
+ _address = {New York, NY, USA},
  }
  
 @inproceedings{turchin:generalisation,
